More changes. Renamed project to JavaNativeWindowAPI (JNWA)